--- a/asst2.css
+++ b/asst2.css
@@ -1,14 +1,30 @@
 body{
-	margin: 10px;
-	color: red
-	}
+	margin:auto;
+    background-color: darkgrey
+		}
 img{
 	width:100px 
 	}	
 div.right {
 			float:left;
+            
 			}
 div.left	{
 			float: right;
+            
 			
-			}		
+			}	
+fieldset {
+    background-color: white ;
+    margin: auto ;
+    padding: 20 px
+    border : 20px red ;
+        
+}
+p.Heading2 {
+        text-decoration: underline ;
+        
+    
+    
+    
+}
